--- a/src/main/resources/com/example/ui/main.fxml
+++ b/src/main/resources/com/example/ui/main.fxml
@@ -1,40 +1,155 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Circle?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="680.0" prefWidth="980.0" styleClass="pane" stylesheets="@../../../css/Styleheet.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ui.mainController">
+<HBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="680.0" prefWidth="980.0" styleClass="blue-panel" stylesheets="@../../../css/Styleheet.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ui.mainController">
    <children>
-      <HBox alignment="CENTER" layoutX="167.0" layoutY="158.0" prefHeight="100.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox alignment="TOP_CENTER" maxWidth="280.0" prefHeight="680.0" prefWidth="280.0" styleClass="pane">
          <children>
-            <VBox maxWidth="280.0" prefHeight="680.0" prefWidth="280.0" styleClass="blue-btn" HBox.hgrow="ALWAYS">
+            <Label alignment="CENTER" prefHeight="50.0" prefWidth="200.0" text="Name App">
+               <VBox.margin>
+                  <Insets bottom="10.0" top="10.0" />
+               </VBox.margin>
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
+            <VBox alignment="TOP_CENTER" prefHeight="336.0" prefWidth="100.0">
                <children>
-                  <Pane maxHeight="280.0" maxWidth="280.0" prefHeight="280.0" prefWidth="280.0" VBox.vgrow="ALWAYS">
+                  <GridPane alignment="CENTER" VBox.vgrow="ALWAYS">
+                     <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                     </rowConstraints>
                      <children>
-                        <ImageView fx:id="Header" fitHeight="280.0" fitWidth="280.0" pickOnBounds="true" smooth="false" style="-fx-opacity: 0.2;">
-                           <image>
-                              <Image url="@../../../../../../../../../../Desktop/pngwing.com.png" />
-                           </image>
-                        </ImageView>
-                        <Circle fx:id="CircleAvatar" fill="DODGERBLUE" layoutX="140.0" layoutY="140.0" radius="80.0" stroke="BLACK" strokeType="INSIDE" />
+                        <Rectangle fx:id="rectangleHeader" arcHeight="5.0" arcWidth="5.0" fill="#285075" height="180.0" stroke="BLACK" strokeType="INSIDE" styleClass="header" width="260.0" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                           <GridPane.margin>
+                              <Insets />
+                           </GridPane.margin>
+                        </Rectangle>
+                        <Circle fx:id="CircleAvatar" fill="DODGERBLUE" radius="70.0" stroke="BLACK" strokeType="INSIDE" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+                           <GridPane.margin>
+                              <Insets top="30.0" />
+                           </GridPane.margin>
+                        </Circle>
                      </children>
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
+                  </GridPane>
+                  <Label fx:id="userName" alignment="CENTER" prefHeight="30.0" prefWidth="100.0" text="User Name">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
                      <VBox.margin>
-                        <Insets top="50.0" />
+                        <Insets top="25.0" />
                      </VBox.margin>
-                  </Pane>
+                  </Label>
+               </children>
+               <VBox.margin>
+                  <Insets top="20.0" />
+               </VBox.margin>
+            </VBox>
+            <VBox alignment="TOP_CENTER" prefHeight="537.0" prefWidth="280.0" styleClass="pane" VBox.vgrow="ALWAYS">
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+               <children>
+                  <HBox alignment="CENTER" prefHeight="50.0" prefWidth="200.0">
+                     <VBox.margin>
+                        <Insets top="15.0" />
+                     </VBox.margin>
+                  </HBox>
+                  <Button alignment="TOP_CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#followerNumberBTN" prefHeight="60.0" prefWidth="100.0" styleClass="information-btn">
+                     <graphic>
+                        <Label fx:id="followerNumber" alignment="CENTER" contentDisplay="CENTER" prefHeight="22.0" prefWidth="95.0" text="follower" />
+                     </graphic>
+                     <VBox.margin>
+                        <Insets top="-5.0" />
+                     </VBox.margin>
+                  </Button>
+                  <Button alignment="TOP_CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#followingNumberBTN" prefHeight="60.0" prefWidth="100.0" styleClass="information-btn">
+                     <graphic>
+                        <Label fx:id="followingNumber" alignment="CENTER" contentDisplay="CENTER" prefHeight="60.0" prefWidth="100.0" text="following" />
+                     </graphic>
+                     <VBox.margin>
+                        <Insets top="5.0" />
+                     </VBox.margin>
+                  </Button>
+                  <Button alignment="TOP_CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#tweetNumberBTN" prefHeight="60.0" prefWidth="100.0" styleClass="information-btn">
+                     <graphic>
+                        <Label fx:id="tweetNumber" alignment="CENTER" contentDisplay="CENTER" prefHeight="60.0" prefWidth="100.0" text="Tweet" />
+                     </graphic>
+                     <VBox.margin>
+                        <Insets top="5.0" />
+                     </VBox.margin>
+                  </Button>
+                  <Button alignment="TOP_CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#homeBTN" prefHeight="30.0" prefWidth="220.0" styleClass="menu-btn" text="Home" textFill="#e4e4e4">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Button>
+                  <Button alignment="TOP_CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#newTwettBTN" prefHeight="30.0" prefWidth="220.0" styleClass="menu-btn" text="New Tweet" textFill="#e4e4e4">
+                     <VBox.margin>
+                        <Insets top="5.0" />
+                     </VBox.margin>
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Button>
+                  <Button alignment="TOP_CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#EditProfileBTN" prefHeight="30.0" prefWidth="220.0" styleClass="menu-btn" text="Edit Profile" textFill="WHITE">
+                     <VBox.margin>
+                        <Insets top="5.0" />
+                     </VBox.margin>
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Button>
+                  <Button alignment="TOP_CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#DirectBTN" prefHeight="30.0" prefWidth="220.0" styleClass="menu-btn" text="Direct" textFill="#e8e8e8">
+                     <VBox.margin>
+                        <Insets top="5.0" />
+                     </VBox.margin>
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Button>
+                  <Button alignment="TOP_CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#search" prefHeight="30.0" prefWidth="220.0" styleClass="menu-btn" text="Search" textFill="WHITE" VBox.vgrow="ALWAYS">
+                     <VBox.margin>
+                        <Insets top="5.0" />
+                     </VBox.margin>
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Button>
+                  <Button alignment="TOP_CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#HashtagStatisticsBTN1" prefHeight="30.0" prefWidth="220.0" styleClass="menu-btn" text="Hashtag Statistic" textFill="WHITE">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets top="5.0" />
+                     </VBox.margin>
+                  </Button>
+                  <Button fx:id="LogoutBTN" alignment="TOP_CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#logout" prefHeight="30.0" prefWidth="220.0" styleClass="menu-btn" text="Logout" textFill="WHITE">
+                     <VBox.margin>
+                        <Insets bottom="10.0" top="15.0" />
+                     </VBox.margin>
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Button>
                </children>
             </VBox>
-            <VBox prefHeight="680.0" prefWidth="700.0" styleClass="blue-panel" HBox.hgrow="ALWAYS" />
          </children>
-      </HBox>
+      </VBox>
+      <VBox fx:id="VboxScreen" alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="680.0" prefWidth="280.0" styleClass="blue-panel" HBox.hgrow="ALWAYS" />
    </children>
-</AnchorPane>
+</HBox>
