--- a/src/main/resources/com/example/ui/sendtweet.fxml
+++ b/src/main/resources/com/example/ui/sendtweet.fxml
@@ -1,12 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextArea?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ui.tweetController">
+<VBox alignment="CENTER" prefHeight="680.0" prefWidth="700.0" styleClass="blue-panel" stylesheets="@../../../css/Styleheet.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TextArea fx:id="text" layoutX="61.0" layoutY="40.0" prefHeight="149.0" prefWidth="493.0" />
-      <Button layoutX="203.0" layoutY="232.0" mnemonicParsing="false" onAction="#sendTweet" prefHeight="64.0" prefWidth="175.0" text="Button" />
+      <GridPane prefHeight="621.0" prefWidth="700.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="300.0" vgrow="ALWAYS" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="ALWAYS" />
+        </rowConstraints>
+         <children>
+            <TextField fx:id="imageAddress" prefHeight="40.0" promptText="Addres of image" styleClass="Hbox-search" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+               <font>
+                  <Font size="20.0" />
+               </font>
+               <GridPane.margin>
+                  <Insets bottom="30.0" left="80.0" right="80.0" top="30.0" />
+               </GridPane.margin>
+            </TextField>
+            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#sendTweet" prefHeight="64.0" prefWidth="175.0" styleClass="blue-btn-search" text="Send" GridPane.halignment="RIGHT" GridPane.rowIndex="2" GridPane.valignment="BOTTOM">
+               <GridPane.margin>
+                  <Insets bottom="20.0" right="20.0" />
+               </GridPane.margin>
+            </Button>
+            <TextArea fx:id="text" prefHeight="180.0" prefWidth="640.0" promptText="Text" style="-fx-background-color: #034680;" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+               <font>
+                  <Font size="20.0" />
+               </font>
+               <GridPane.margin>
+                  <Insets bottom="30.0" left="30.0" right="30.0" top="80.0" />
+               </GridPane.margin>
+            </TextArea>
+         </children>
+      </GridPane>
    </children>
-</AnchorPane>
+</VBox>
