--- a/src/main/resources/com/example/ui/signIn.fxml
+++ b/src/main/resources/com/example/ui/signIn.fxml
@@ -4,64 +4,61 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="480.0" styleClass="blue-panel" stylesheets="@../../../css/Styleheet.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ui.SingInController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="480.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ui.SingInController">
    <children>
-      <Label text="Login" textFill="#2693f3">
-         <font>
-            <Font size="20.0" />
-         </font>
-         <VBox.margin>
-            <Insets left="20.0" />
-         </VBox.margin>
-      </Label>
-      <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="200.0">
+      <VBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="480.0" styleClass="blue-panel" stylesheets="@../../../css/Styleheet.css">
          <children>
-            <TextField fx:id="UserName" promptText="User Name" styleClass="tf_box" HBox.hgrow="ALWAYS">
-               <HBox.margin>
-                  <Insets left="15.0" right="10.0" top="15.0" />
-               </HBox.margin>
-            </TextField>
-            <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" smooth="false">
-               <HBox.margin>
-                  <Insets right="10.0" />
-               </HBox.margin>
-            </ImageView>
+            <Label text="Login" textFill="#2693f3">
+               <font>
+                  <Font size="20.0" />
+               </font>
+               <VBox.margin>
+                  <Insets left="20.0" />
+               </VBox.margin>
+            </Label>
+            <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="200.0">
+               <children>
+                  <TextField fx:id="UserName" promptText="User Name" styleClass="tf_box" HBox.hgrow="ALWAYS">
+                     <HBox.margin>
+                        <Insets left="15.0" right="10.0" top="15.0" />
+                     </HBox.margin>
+                  </TextField>
+               </children>
+            </HBox>
+            <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="200.0">
+               <children>
+                  <TextField fx:id="Password" promptText="Password" styleClass="tf_box" HBox.hgrow="ALWAYS">
+                     <HBox.margin>
+                        <Insets left="15.0" right="10.0" top="15.0" />
+                     </HBox.margin>
+                  </TextField>
+               </children>
+            </HBox>
+            <Button mnemonicParsing="false" onAction="#SignIn" prefHeight="40.0" prefWidth="458.0" styleClass="blue-btn" text="Sign In" VBox.vgrow="ALWAYS">
+               <VBox.margin>
+                  <Insets left="15.0" right="15.0" top="20.0" />
+               </VBox.margin>
+               <font>
+                  <Font name="System Font" size="20.0" />
+               </font>
+            </Button>
          </children>
-      </HBox>
-      <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="200.0">
-         <children>
-            <TextField fx:id="Password" promptText="Password" styleClass="tf_box" HBox.hgrow="ALWAYS">
-               <HBox.margin>
-                  <Insets left="15.0" right="10.0" top="15.0" />
-               </HBox.margin>
-            </TextField>
-            <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" smooth="false">
-               <HBox.margin>
-                  <Insets right="10.0" />
-               </HBox.margin>
-            </ImageView>
-         </children>
-      </HBox>
-      <Button mnemonicParsing="false" onAction="#SignIn" prefHeight="40.0" prefWidth="458.0" styleClass="blue-btn" text="Sign In" VBox.vgrow="ALWAYS">
-         <VBox.margin>
-            <Insets left="15.0" right="15.0" top="20.0" />
-         </VBox.margin>
-         <font>
-            <Font name="System Font" size="20.0" />
-         </font>
-      </Button>
-      <Label fx:id="LabelSignIn" prefHeight="40.0" prefWidth="550.0" textFill="#b91b1b" VBox.vgrow="ALWAYS">
-         <font>
-            <Font size="20.0" />
-         </font>
-         <VBox.margin>
-            <Insets left="15.0" right="15.0" top="15.0" />
-         </VBox.margin>
-      </Label>
+      </VBox>
+      <GridPane fx:id="gridPane" alignment="CENTER" layoutX="90.0" layoutY="40.0" prefHeight="400.0" prefWidth="300.0" stylesheets="@../../../css/Styleheet.css">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+      </GridPane>
    </children>
-</VBox>
+</Pane>
